# BusyBiscuits_Database

./: BBDConfig.h  CMakeLists.txt  ExecuteMainMakeFiles.sh  ExecuteTestMakeFiles.sh  GenerateMakeFiles.sh  MainMakeFilesExecute.sh  buildandrun.sh  open.txt  readme.md  run.sh  runtests.sh
lib/: CMakeLists.txt
logs/: log.txt
src/: CMakeLists.txt  db2.txt  main  main.cpp  open.txt
src/binarytree/: binarytree.cpp  binarytree.h
src/cli/: cli.cpp  cli.h
src/database/: database.cpp  database.h
src/databasemanager/: databasemanager.cpp  databasemanager.h
src/datastructure/: datastructure.cpp  datastructure.h
src/hashtable/: hashtable.cpp  hashtable.h
src/logger/: logger.cpp  logger.h
src/rwdata/: rwdata.cpp  rwdata.h
test/: CMakeLists.txt  temp.cpp  test  test_RWData.cpp  test_methods.cpp  test_temp.cpp
